Fix filter styling on mobile

--- a/priv/lib-src/_components.filters.scss
+++ b/priv/lib-src/_components.filters.scss
@@ -19,29 +19,37 @@
 }
 
 .c-filters__options {
-    display: flex;
-    flex-flow: row wrap;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr) ;
     align-items: center;
     gap: 1rem;
     width: 100%;
     margin: 2em 0 0;
 
+    &:has(.c-filters__remove) {
+        grid-template-columns: repeat(2, 1fr) 4.5rem;
+    }
+
     label {
         width: 100%;
+        grid-row: 1;
     }
 
     @include breakpoint($mediumBreakpoint) {
         width: fit-content;
-        flex-flow: row nowrap;
+        display: flex;
         margin: 0 0 0 auto;
 
-        label {
+        > label:first-child {
             width: auto;
+            position: relative;
+            top: 10px;
         }
     }
 }
 
 .c-filters__date {
+    grid-row: 2;
     position: relative;
     
     label {
@@ -50,6 +58,7 @@
     }
 
     input[type="date"] {
+        width: 100%;
         background: var(--lightTheme);
         cursor: pointer;
         color: light-dark(var(--darkTheme), var(--typographyColor));
@@ -61,8 +70,12 @@
     }
 }
 
+.c-filters__keywords {
+    grid-row: 2;
+}
+
 .c-custom-select {
-    width: calc(100% - 5.5rem);
+    width: 100%;
     position: relative;
 
     select {
@@ -92,6 +105,9 @@
 }
 
 .c-filters__remove {
+    flex-shrink: 0;
+    grid-row: 2;
+    align-self: end;
     color: light-dark(var(--darkTheme), var(--typographyColor));
     transition: background 0.3s ease-out, color 0.3s ease-out;
 
